--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - My Personal Blog</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,6 +18,8 @@
             <a href="blog.html">Blog Posts</a>
             <a href="contact.html">Contact</a>
             <a href="resources.html">Resources</a>
+            <div class="hamburger-menu" onclick="toggleMenu()">
+                <i class="fas fa-bars"></i>
         </div>
     </header>
 
@@ -24,11 +28,36 @@
         <p>Hi! I'm Suhaina Fathima M, a passionate writer, reader, and a Software Engineer. I started this blog to share my
             thoughts on a wide range of topics including National and International Affairs, Technology News etc.. I hope to connect with like-minded people
             and inspire others through my experiences!</p>
+            <iframe class = "video " width="50%" height="315" src="https://www.youtube.com/embed/KZn42zsbPN0?si=VchunCWEazHYnSRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+    </section>
+
+    <section class="social-media">
+        <ul class="footer-links">
+            <li><a href="index.html">Home</a> </li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="blog.html">Blog Posts</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="resources.html">Resources</a></li>
+        </ul>
+
+        <div class="footer-media">
+            <h4>Connect with us</h4>
+        <ul>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a> </li>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a> </li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a> </li>
+            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a> </li>
+        </ul>
+        </div>
     </section>
 
     <footer>
         <p>&copy; 2025 Suhaina Fathima M. All rights reserved.</p>
     </footer>
+
+    <script src="script.js">
+
+    </script>
 </body>
 
 </html>
