--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - My Personal Blog</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,6 +17,8 @@
             <a href="blog.html">Blog Posts</a>
             <a href="contact.html">Contact</a>
             <a href="resources.html">Resources</a>
+            <div class="hamburger-menu" onclick="toggleMenu()">
+                <i class="fas fa-bars"></i>
         </div>
     </header>
 
@@ -45,10 +48,34 @@
         </form>
     </section>
 
+    <section class="social-media">
+        <ul class="footer-links">
+            <li><a href="index.html">Home</a> </li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="blog.html">Blog Posts</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="resources.html">Resources</a></li>
+        </ul>
+
+        <div class="footer-media">
+            <h4>Connect with us</h4>
+        <ul>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a> </li>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a> </li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a> </li>
+            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a> </li>
+        </ul>
+        </div>
+    </section>
+
 
     <footer>
         <p>&copy; 2025 Suhaina Fathima M. All rights reserved.</p>
     </footer>
+
+    <script src="script.js">
+
+    </script>
 </body>
 
 </html>
