--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Personal Blog</title>
 </head>
 <body>
@@ -14,6 +15,9 @@
             <a href="blog.html">Blog Posts</a>
             <a href="contact.html">Contact</a>
             <a href="resources.html">Resources</a>
+
+            <div class="hamburger-menu" onclick="toggleMenu()">
+                <i class="fas fa-bars"></i>
         </div>
         <form action="search_results.html" method="GET" class="search-form">
             <input type="text" name="search" placeholder="Search blog..." required>
@@ -56,8 +60,28 @@
         </div>
     </section>
 
+    <section class="social-media">
+        <ul class="footer-links">
+            <li><a href="index.html">Home</a> </li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="blog.html">Blog Posts</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="resources.html">Resources</a></li>
+        </ul>
+
+        <div class="footer-media">
+            <h4>Connect with us</h4>
+        <ul>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a> </li>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a> </li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a> </li>
+            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a> </li>
+        </ul>
+        </div>
+    </section>
+
     <footer>
-        <p> &copy; 2025 Suhaina Fathima M. All rights reserved.</p>
+        <p>&copy; 2025 Suhaina Fathima M. All rights reserved.</p>
     </footer>
     
     <script src="script.js">
